# looselips

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: bench_models.py  conversations.json  example_config.toml  looselips.toml  sample_config.toml  sample_report.html
looselips/: __main__.py  input.py  matchers.py  parsers.py  report.py  scanner.py
looselips/bench/: __init__.py  __main__.py  config.toml  db.py  render.py  report.py
looselips/bench/testcases/: addiction_novel.yaml  bankruptcy_filing.yaml  caffeine_medication.yaml  cinderella_story.yaml  custom_orthotics.yaml  dreyfus_affair.yaml  expungement_question.yaml  ghostwriting_politician.yaml  hiking_boots_no_size.yaml  interview_outfit.yaml  landlord_dispute.yaml  overstay_reentry_travel.yaml  pregnancy_announcement.yaml  python_list_comprehension.yaml  resume_builder.yaml  rock_climbing.yaml  running_shoes.yaml  scarlet_letter_essay.yaml  size_17_shopping.yaml  ski_trip_japan.yaml  sourdough_recipe.yaml  std_test_results.yaml  tax_evasion.yaml  travel_packing_hallucinated_affair.yaml  weather_forecast.yaml  wedding_speech.yaml  workers_comp_question.yaml
looselips/cli/: app.py  config.py
looselips/templates/: bench_report.html.j2  report.html.j2
scripts/: bench.py  bench_config.toml  compare_bench_dbs.py  run_on_modal.py
scripts/bench/: ankle_monitor.yaml  bankruptcy_filing_french.yaml  bowling_league.yaml  breakup_advice.yaml  carbon_footprint.yaml  cheating_exam.yaml  cosplay_costume.yaml  custom_orthotics.yaml  debt_secret.yaml  debt_secret_chinese.yaml  diabetes_management.yaml  dog_training.yaml  drag_costume_fitting.yaml  dui.yaml  env_file_debug.yaml  eu_size_conversion.yaml  explain_photosynthesis.yaml  foot_hyperhidrosis.yaml  forwarded_meeting_email.yaml  gardening_hallucinated_both.yaml  ghostwriting_politician.yaml  guitar_learning.yaml  historical_footbinding_trap.yaml  home_insurance_accident.yaml  home_renovation.yaml  illegal_sublet_boots.yaml  immigration_status.yaml  insurance_claim_backed_in.yaml  interview_outfit.yaml  italy_trip.yaml  kids_shoes.yaml  marathon_training.yaml  meal_plan_hallucinated_size.yaml  meal_prep_sunday.yaml  missouri_compromise.yaml  neuropathy_shoe_fit.yaml  overstay_reentry_travel.yaml  password_manager_cleanup.yaml  password_manager_paste.yaml  resume_builder.yaml  (+19 more)
tests/: conftest.py  test_bench.py  test_cli.py  test_config.py  test_example_config.py  test_input.py  test_llm_integration.py  test_matchers.py  test_parsers.py  test_report.py  test_scanner.py
