[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "looselips"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "argcomplete",
    "instructor[litellm]",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "bandit",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-mypy",
    "pytest-randomly",
    "pytest-ruff",
    "ruff",
]

[project.scripts]
looselips = "looselips.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--mypy --ruff --strict-markers"
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["looselips"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "SIM",       # flake8-simplify
    "S",         # flake8-bandit (security)
    "C4",        # flake8-comprehensions
    "PT",        # flake8-pytest-style
    "RET",       # flake8-return
    "PIE",       # flake8-pie
    "T20",       # flake8-print (no stray prints)
]
ignore = [
    "S101",      # assert is fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "T20"]
"looselips/parsers.py" = ["B023"]  # walk() uses enclosing scope intentionally

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
strict = true
