[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "looselips"
version = "0.1.2"
description = "Scan your LLM chat exports for personal information"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Michael Graham", email = "mikegraham@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "argcomplete",
    "instructor[litellm]",
    "jinja2",
]

[project.urls]
Homepage = "https://github.com/mikegraham/looselips"
Repository = "https://github.com/mikegraham/looselips"

[project.optional-dependencies]
dev = [
    "build",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-mypy",
    "pytest-randomly",
    "pytest-ruff",
    "ruff",
    "twine",
]

[project.scripts]
looselips = "looselips.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "examples*", "scripts*"]

[tool.setuptools.package-data]
looselips = ["templates/*.j2", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--mypy --ruff --strict-markers --cov --cov-branch --cov-fail-under=90"
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["looselips"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "SIM",       # flake8-simplify
    "S",         # flake8-bandit (security)
    "C4",        # flake8-comprehensions
    "PT",        # flake8-pytest-style
    "RET",       # flake8-return
    "PIE",       # flake8-pie
    "T20",       # flake8-print (no stray prints)
]
ignore = [
    "S101",      # assert is fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "T20"]
"looselips/parsers.py" = ["B023"]  # walk() uses enclosing scope intentionally

[tool.mypy]
strict = true
